2011-04-20  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        move page generation into a single function
        https://bugs.webkit.org/show_bug.cgi?id=59027

        Now executing the script doesn't create any state. We should then
        be able to write tests for this by setting custom results data.

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:

2011-04-20  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        move global state into a shared object
        https://bugs.webkit.org/show_bug.cgi?id=59023

        This makes the code more testable.

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:

2011-04-20  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Tony Chang.

        move global state into a shared object
        https://bugs.webkit.org/show_bug.cgi?id=59023

        This makes the code more testable.

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:

2011-04-20  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        add expandAll/collapseAll links
        https://bugs.webkit.org/show_bug.cgi?id=59011

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:

2011-04-20  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fixes for wx 2.9.1, Cocoa and 64-bit builds.

        * Scripts/webkitdirs.pm:
        * wx/build/build_utils.py:
        * wx/build/settings.py:
        * wx/install-unix-extras:
        * wx/packaging/build-mac-installer.py:
        * wx/packaging/build-win-installer.py:

2011-04-20  Adam Roben  <aroben@apple.com>

        Replace old-run-webkit-tests's win-7 platform with win-7sp0

        It was an error that we had a win-7 platform to begin with. Windows 7 was the most recent
        version of Windows we cared about, so its results should just go in win. But now that